--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,6 +13,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <li {% if page.sectionid=='CV' %} class="active" {% endif %}><a href="{{ "/CV/home/" | relative_url }}">CV</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | relative_url }}">Docs</a></li>
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | relative_url }}">Blog</a></li>
             </ul>
