--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -15,7 +15,7 @@
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='CV' %} class="active" {% endif %}><a href="{{ "/CV/home/" | relative_url }}">CV</a></li>
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | relative_url }}">Comp Bio</a></li>
-                <li {% if page.sectionid=='stats' %} class="active" {% endif %}><a href="{{ "/stats/home/" | relative_url }}">Stats</a></li>
+                <li {% if page.sectionid=='stats' %} class="active" {% endif %}><a href="{{ "/stats/home/" | relative_url }}">Stats+ML</a></li>
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | relative_url }}">Blog</a></li>
             </ul>
             <div class="navbar-right">
